--- a/languages/pojo-forms-he_IL.po
+++ b/languages/pojo-forms-he_IL.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Forms\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-06 20:32+0300\n"
-"PO-Revision-Date: 2015-07-06 20:39+0300\n"
+"PO-Revision-Date: 2015-07-06 20:41+0300\n"
 "Last-Translator: Ariel K <a@arielk.net>\n"
 "Language-Team: Pojo Them <aryodigital@gmail.com>\n"
 "Language: he_IL\n"
@@ -275,7 +275,7 @@ msgstr "טקסט בתוך השדה"
 
 #: ../classes/class-pojo-forms-cpt.php:197
 msgid "Required"
-msgstr "חובה"
+msgstr "שדה חובה"
 
 #: ../classes/class-pojo-forms-cpt.php:204
 msgid "Width"
