Fixed correcting translation (HE)

--- a/languages/pojo-forms-he_IL.po
+++ b/languages/pojo-forms-he_IL.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Forms\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-18 17:33+0300\n"
-"PO-Revision-Date: 2015-08-18 17:44+0300\n"
+"PO-Revision-Date: 2015-10-13 16:46+0300\n"
 "Last-Translator: Ariel Klikstein <a@arielk.net>\n"
 "Language-Team: Pojo Them <aryodigital@gmail.com>\n"
 "Language: he_IL\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 1.8.4\n"
+"X-Generator: Poedit 1.8.5\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e;_x;_n:1,2;_c,_nc:4c,1,2\n"
 "X-Poedit-Basepath: .\n"
@@ -60,7 +60,7 @@ msgid ""
 "according to the following settings, e.g. Author Email: [form-field-1]"
 msgstr ""
 "אם אתה משתמש בתוסף Akismet תוכל גם להשתמש בו במסנן ספאם לטופס על ידי הגדרות "
-"השדה. יש להזין את השורטקוד ID של השדה הרלוונטי לפי הההגדרות הבאות, לדוגמא: "
+"השדה. יש להזין את השורטקוד ID של השדה הרלוונטי לפי ההגדרות הבאות, לדוגמה: "
 "אימייל מחבר: [form-field-1]"
 
 #: classes/class-pojo-forms-akismet.php:23
