--- a/languages/pojo-forms-he_IL.po
+++ b/languages/pojo-forms-he_IL.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: Forms\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-21 21:33+0200\n"
-"PO-Revision-Date: 2016-02-21 21:38+0200\n"
-"Last-Translator: Yehuda Hassine <yehuda@wpdevops.co.il>\n"
+"PO-Revision-Date: 2016-02-21 21:48+0200\n"
+"Last-Translator: Yehuda Hassine <yehuda@myinbox.in>\n"
 "Language-Team: Pojo Them <aryodigital@gmail.com>\n"
 "Language: he_IL\n"
 "MIME-Version: 1.0\n"
