--- a/languages/pojo-forms-he_IL.po
+++ b/languages/pojo-forms-he_IL.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Forms\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-23 14:32+0200\n"
-"PO-Revision-Date: 2016-02-23 14:32+0200\n"
+"PO-Revision-Date: 2016-03-01 09:46+0200\n"
 "Last-Translator: Ariel Klikstein <a@arielk.net>\n"
 "Language-Team: Pojo Them <aryodigital@gmail.com>\n"
 "Language: he_IL\n"
@@ -517,7 +517,7 @@ msgstr "הגדרות שדה"
 
 #: classes/class-pojo-forms-cpt.php:426
 msgid "Label"
-msgstr ""
+msgstr "כותרת שדה"
 
 #: classes/class-pojo-forms-cpt.php:429
 msgid "Top"
