--- a/languages/pojo-forms.pot
+++ b/languages/pojo-forms.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pojo-forms 1.3.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-19 13:35+0300\n"
+"POT-Creation-Date: 2016-06-19 13:40+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -788,7 +788,7 @@ msgid "Title:"
 msgstr ""
 
 #: classes/class-pojo-forms-widget.php:25
-msgid "Select Form"
+msgid "- Select Form -"
 msgstr ""
 
 #: classes/class-pojo-forms-widget.php:31
